Version 16.4 - 2 December 2013

- fix banners not being blue anymore with Oxygen-gtk theme (kbo#328270)
- diskdrake:
  o fix diskdrake colorized partition tabs with Adwaita (bgo#719624)

Version 16.3 - 30 November 2013

- harddrake:
  o fix starting after draksound drop OSS/ALSA switch

Version 16.2 - 29 November 2013

- diskdrake:
  o fix dialog keeping growing when switching tabs (mga#11822):
    move partition labels to toolips
- draksound:
  o do not offer to switch to OSS
  o do not offer to switch to another driver if there's none
  o do not offer to pick a random driver when we've a default one
- finish-install:
  o no more run urpmi.update when adding media
    (uneeded with urpmi-7.27+)
- mygtk3 layer:
  o add support for RadioMenuItems for rpmdrake
- ugtk3 layer:
  o make shrinking window work again (eg: draknfs)

Version 16.1 - 28 November 2013

- mcc:
  o restore galaxy RC file, thus fixing left panel text color (mga#11773)
  o fix Gtk2 banners' text position (mga#11778)
- Banners:
  o align text to left instead of centering it
  o text is rendered as blue again
- diskdrake:
  o prevent looping forever when sizing partition tabs
- logdrake:
  o fix Gtk3::TextView::get_window() passed too few parameters (mga#11807)

Version 16.0 - 23 November 2013

- switch from Gtk+-2 to Gtk+-3:
  o Banners: most themes work OK but Oxygen-gtk3...
  o diskdrake: most themes work OK but Oxygen-gtk3...
  o drakclock cannot temporary changes the clock
  o notifications work again for net_applet
- detect_devices:
  fix ids to be numeric
- drakxservices:
  o simplify: just use tooltips for service descriptions"
- drakx-in-chroot:
  o add --depth in order to force 16bit colors mode
- drakclock:
  o assume chrony rather than ntp when neither is installed
- draksec:
  o make sure to restart polkitd after writing rules
  o support polkit rules editing for permissions overrides

Version 15.73.1 - 19 November 2013
- add chrony support to drakclock mga#11092
