@@ -1,3 +1,6 @@
+- partitioning:
+  o detect eMMc block devices (Luc Menut, mga#11812)
+
 Version 16.4 - 2 December 2013
 
 - fix partitioning wizard moving the main window to left (mga#11790)
