@@ -1,3 +1,6 @@
+- diskdrake:
+  o detect eMMc block devices (Luc Menut, mga#11812)
+
 Version 16.4 - 2 December 2013
 
 - fix banners not being blue anymore with Oxygen-gtk theme (kbo#328270)
